第二次上传

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 </head>
 
 <body>
+    <!-- 周边 -->
+    <div id="rim_box">
+        <div class="rim">
+            <h2>周边</h2>
+        </div>
+    </div>
     <!-- 为你推荐 -->
     <div id="recommend">
         <div class="recom">
